--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -126,7 +126,7 @@
 }
 
 @article{gassner2017br1,
-  title={The BR1 Scheme is Stable for the Compressible Navier-Stokes Equations},
+  title={{The BR1 Scheme is Stable for the Compressible Navier-Stokes Equations}},
   author={Gassner, Gregor J and Winters, Andrew R and Hindenlang, Florian J and Kopriva, David A},
   journal={arXiv preprint arXiv:1704.03646},
   year={2017}
@@ -220,7 +220,7 @@
   author={Persson, Per-Olof and Peraire, Jaime},
   year={2006},
   journal={AIAA},
-  number={112}
+  volume={112}
 }
 @article{wang2013high,
   title={{High-order CFD methods: current status and perspective}},
